Fix overflowing on quote section

--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -113,12 +113,14 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex: 1;
 }
 
 .quote-container {
     width: 43%;
     height: 70%;
     color: #1F2937;
+    margin: 5rem 0px;
 }
 
 .quote-text {
